dark mode almost fixed

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,9 +12,7 @@ nav {
   margin: 8px;
   width: 55%;
 }
-.sombranav {
-  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
-}
+
 .padding-header {
   padding-left: 20px;
   padding-right: 20px;
