--- a/css/styleDark.css
+++ b/css/styleDark.css
@@ -23,6 +23,18 @@ body.dark,
   background-color: white;
   color: black;
 }
+.dark .nav-link,
+.dark .nav-link {
+  color: rgba(255, 255, 255, 0.55);
+  text-decoration: none;
+}
+.dark .nav-link.active{
+  color: white;
+}
+
+#navTop {
+  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
+}
 /*.navbar-dark {
   background-color: #303e54;
   color: white;
